# cookiecutter-django-bvgels

./: .gitmodules  README.md  cookiecutter.json  env.example
hooks/: post_gen_project.py
{{cookiecutter.dir}}/: .dockerignore  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  env.example  init_submodules.sh  manage.py  pyproject.toml  setup.sh
{{cookiecutter.dir}}/apps/api/: router.py
{{cookiecutter.dir}}/apps/authentication/: admin.py  models.py  resources.py  serializers.py  signals.py  urls.py  views.py
{{cookiecutter.dir}}/apps/authentication/migrations/: 0007_alter_client_hourly_rate_currency.py
{{cookiecutter.dir}}/apps/core/: models.py  utils.py
{{cookiecutter.dir}}/apps/core/management/commands/: generate_secret_key.py
{{cookiecutter.dir}}/config/: backup.py  urls.py
{{cookiecutter.dir}}/config/settings/: base.py
{{cookiecutter.dir}}/config/settings/platform/: local.py  prod.py  qa.py  staging.py
{{cookiecutter.dir}}/config/templates/email/: confirmation_email.html  forgot_password_email.html
